@@ -154,7 +154,7 @@ $messages = array(
 'protect'           => 'Protehel',
 'protect_change'    => 'chambal proteción',
 'protectthispage'   => 'Protehel esta páhina',
-'unprotect'         => 'esprotehel',
+'unprotect'         => 'Esprotehel',
 'unprotectthispage' => 'Esprotehel esta páhina',
 'newpage'           => 'Páhina nueva',
 'talkpage'          => 'Palral sobri esta páhina',
