@@ -145,7 +145,7 @@ $messages = array(
 'undelete_short'    => 'Ἐπανορθοῦν {{PLURAL:$1|ἕνα μεταγραφέν|$1 μεταγραφέντα}}',
 'protect'           => 'Φυλλάττειν',
 'protectthispage'   => 'Tήνδε τὴν δέλτον φυλάττειν',
-'unprotect'         => 'μὴ φυλάττειν',
+'unprotect'         => 'Μὴ φυλάττειν',
 'unprotectthispage' => 'Tήνδε τὴν δέλτον  μὴ φυλάττειν',
 'newpage'           => 'Δέλτος νέα',
 'talkpage'          => 'Διαλέγε τήνδε τὴν δέλτον',
