@@ -224,7 +224,7 @@ $messages = array(
 'protect'           => 'Protegir',
 'protect_change'    => 'cambiar la proteccion',
 'protectthispage'   => 'Protegir aquesta pagina',
-'unprotect'         => 'desprotegir',
+'unprotect'         => 'Desprotegir',
 'unprotectthispage' => 'Desprotegir aquesta pagina',
 'newpage'           => 'Pagina novèla',
 'talkpage'          => 'Pagina de discussion',
