@@ -305,7 +305,7 @@ $messages = array(
 'protect'           => 'Skrivskydda',
 'protect_change'    => 'ändra skrivskydd',
 'protectthispage'   => 'Skrivskydda denna sida',
-'unprotect'         => 'ta bort skrivskydd',
+'unprotect'         => 'Ta bort skrivskydd',
 'unprotectthispage' => 'Ta bort skrivskyddet från den här sidan',
 'newpage'           => 'Ny sida',
 'talkpage'          => 'Diskussionssida',
